--- a/totinh.html
+++ b/totinh.html
@@ -21,6 +21,7 @@ canvas {
   </style>
  </HEAD>
  <BODY>
+  <h1 style="color: red; text-align: center; padding-top: 20px;font-size: 100px; margin-bottom: -50px;">Dương thích My</h1>
   <canvas id="pinkboard"></canvas>
   <script>
   /*
